#446 major improvements in font and bitmap creator.